--- a/README
+++ b/README
@@ -1,11 +1,19 @@
-Pure javascript implementation of ephemeris calculations for sun, planets, comets, asteroids and stars.
+Pure JavaScript implementation of ephemeris calculations for sun, planets, comets, asteroids and stars.
 
-The initial implementation was done by mivion and it was based on Steve Moshier's work (http://www.moshier.net).
+The initial implementation was the Astronomical Almanac (aa-56) by Steve Moshier written in c. Full documentation can be found at http://www.moshier.net/aadoc.html
+A debian package for the Astronomical Almanac can be found here: http://packages.debian.org/testing/science/astronomical-almanac
 
-The index.html file will by default calculate the planetary positions at the time of the page load. You can also calculate the positions for a specific time by entering in a time in the text area in the format of dd.mm.yyyy hh:mm:ss.sss. You will need to convert the time to UTC.
+It also uses Moshier's planets according to DE404 plan404.zip found at http://www.moshier.net/ This is the trigonometric series for the motions of the nine planets, adjusted for a best fit to JPL's DE404 Long (3000 B.C. to 3000 A.D) Ephemeris.
+
+Github user mivion converted Moshier's program from c to JavaScript.
+https://github.com/mivion/ephemeris
+
+This respository is Kent Bye's modified version of mivion's implementation
+
+The index.html file will by default calculate the planetary positions at the time of the page load. You can also calculate the positions for a specific time by entering in a time in a drop-down select list. You will need to convert the time to UTC.
 
 A demo page can be seen here: http://astrology.kentbye.com/index.html
 
-The original index.html file can be found at ephemerides.html. Click the equal sign to populate the Body drop down. Select the planetary body, and click one of the buttons again to calculate the Longitude.
+Mivion's original index.html file can be found at ephemerides.html. Click the equal sign to populate the Body drop down. Select the planetary body, and click one of the buttons again to calculate the Longitude.
 
 Licensed under GPL version 2 (http://www.gnu.org/licenses/gpl-2.0.html).
